--- a/cs/conf/monitor.conf
+++ b/cs/conf/monitor.conf
@@ -1,6 +1,17 @@
 #配置文件
 #用来指定端口等信息
 # '='号之间不能有空格
-trans_port=10000
 
-daemon_port=10001
+#master.py / slave.py 所需端口
+trans_port = '10000'
+
+# daemon 所需端口
+daemon_port = '10001'
+
+
+#database
+database_db = 'monitor'
+database_host = 'localhost'
+database_user = 'root'
+database_passwd = 'notamaiba'
+database_port = '3306'
