--- a/cs/conf/monitor.conf
+++ b/cs/conf/monitor.conf
@@ -15,3 +15,6 @@ database_host = 'localhost'
 database_user = 'root'
 database_passwd = 'notamaiba'
 database_port = '3306'
+
+#项目目录 --> conf/ 的目录
+path = '/home/wzj/Documents/python/monitor/conf'
